[package]
name = "rusterlium"
version = "0.1.0"
authors = ["Sonny Scroggin <sonny@scrogg.in>"]
edition = "2018"

[dependencies]
erlang_nif-sys = "0.6.4"
failure = "0.1.3"
failure_derive = "0.1.3"
lazy_static = "1.2.0"
rusterlium_codegen = { path = "../rusterlium_codegen" }
rustler = "0.18.0"
rustler_codegen = "0.18.0"
