[package]
authors = ["Sonny Scroggin <sonny@scrogg.in>"]
description = "Attributes to simplify the use of the rusterlium crate"
license = "Apache 2.0"
name = "rusterlium_codegen"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.8"
syn = { version = "0.15", features = ["full", "extra-traits"] }
failure = "0.1.3"
failure_derive = "0.1.3"
proc-macro2 = "0.4.24"
erlang_nif-sys = "0.6.4"
